--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.5",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "xlsx": "^0.18.5",
     "xlsx-style": "^0.8.13",
     "zone.js": "~0.14.3"
